[package]
name = "rimport3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.2.8", features = ["derive", "suggestions", "color"] }
serde = "1.0.137"


[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]

[profile.release.build-override]
opt-level = 3
codegen-units = 256
