[package]
name = "ronin-to-mongo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transactions"
path = "src/transactions.rs"

[[bin]]
name = "axie-transfer"
path = "src/axie.rs"

[[bin]]
name = "sale-history"
path = "src/sale-history.rs"



[[bin]]
name = "leaderboard-tracer"
path = "src/leaderboard-tracer.rs"

[[bin]]
name = "leaderboard-analyser"
path = "src/leaderboard-analyse.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.2.8", features = ["derive", "suggestions", "color"] }
serde = {version = "1.0.137"}
serde_repr = "0.1.8"
hex-literal = "0.3.4"
fstrings = "0.2.4-rc2"
sha2 = "0.10.2"
chrono = {version = "0.4.19", features = ["serde"]}
serde_json = "1.0.82"
reqwest = {version = "0.11.11", features = ["json"]}

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]

[profile.release.build-override]
opt-level = 3
codegen-units = 256
